# ITP_S2_Lab2

./: CMakeLists.txt  ITP_S2_Lab2.cpp  ITP_S2_Lab2.sln  ITP_S2_Lab2.vcxproj  ITP_S2_Lab2.vcxproj.filters  files.cpp  files.h  main.cpp  rating.csv  student.cpp  student.h  table.cpp  table.h
